@@ -14,6 +14,8 @@ debhelper (9.20150629) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Apply patch from Guillem Jover to use the
     value of dpkg-architecture variables from the environment,
     if present.  (Closes: #793440)
+  * Dh_Buildsystems.pm/Dh_Lib.pm: Import Exporter's import
+    subroutine rather than adding Exporter to @ISA.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200
 
